--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,3 +1,18 @@
 body{
-  background-color: f0eff1;
+  background-color: #f0eff1;
+}
+
+.keywords{
+  display: flex;
+}
+
+.tags{
+  flex-direction: row;
+  background-color: #f0eff1;
+  color: #22c959;
+  border: 1px solid #22c959;
+  font-size: 1em;
+  border-radius: 50px;
+  margin: 5px;
+  padding: 5px 15px 5px 15px;
 }
