--- a/assets/css/templates/default.css
+++ b/assets/css/templates/default.css
@@ -1,20 +1,36 @@
-main{
-  color: #aaa5b2;
-  font-size: 1.3em;
-  margin: 30px 15vw 50px 15vw;
-  z-index: 0;
-  color:black;
-  mix-blend-mode: darken;
+article{
+  width: 80%;
+  position: absolute;
+  right:0px;
 }
 
-header{
-  margin: 0 0 0 150px;
+h1{
+  color: #22c959;
+  font-size: 1em;
+  margin: 30px 15vw 50px 15vw;
+  z-index: 0;
+  background-color: #F0EFF1;
+  padding: 10px 20px 10px 20px;
+  border-radius: 20px;
+  border: 1px dashed #22c959;
 }
+
+main{
+  color: #22c959;
+  font-size: 1em;
+  margin: 30px 15vw 50px 15vw;
+  z-index: 0;
+  background-color: #F0EFF1;
+  padding: 20px;
+  border-radius: 20px;
+  border: 1px dashed #22c959;
+}
+
 
 .downloads{
   flex-direction: row;
-  color: #aaa5b2;
-  border: 1px solid #aaa5b2;
+  color: #22c959;
+  border: 1px dashed #22c959;
   font-size: 1em;
   border-radius: 50px;
   text-decoration: none;
@@ -22,23 +38,48 @@ header{
   padding: 5px 15px 0px 15px;
   transition: box-shadow 0.5s;
   margin: 0 0 0 150px;
-
-  color: black;
-  border: 1px solid black;
+  background-color: #F0EFF1;
 }
 
 
 .downloads:hover{
-  box-shadow: inset 0 0 5px #aaa5b2;
-  transition: 0.5s;
+  box-shadow: inset 0 0 5px #22c959;
+  border: 1px solid #22c959;
+  transition: 0.3s;
+
 }
 
 #titleImg{
   display: block;
-  width: 100vw;
   filter: blur(100px);
   z-index: -1000;
   position: fixed;
   top: 20vh;
+  left: 10vw;
+  pointer-events: none;
+  width: 70vw;
+}
+
+.keywords_list{
+  display: flex;
+  flex-direction: column;
+  position: fixed;
+  width: 100vw;
   left: 0px;
+  z-index: -500;
+}
+
+.tags{
+  font-size: 1em;
+  border: none;
+  border-radius: 0;
+  background: none;
+  border-bottom: 1px solid #22c959;
+  margin: 0px;
+  height: 20px;
+}
+
+
+.real_tags:hover{
+
 }
