--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -17,30 +17,61 @@ a{
   color: #22c959;
 }
 
+
 .keywords_list{
   display: flex;
-  justify-content: flex-end;
-  flex-wrap: wrap;
+  flex-direction: column;
   position: fixed;
-  top: 20px;
-  right: 20px;
-  z-index: 2000;
+  width: 100vw;
+  left: 0px;
+  top: 0px;
+  z-index: -500;
 }
 
 .tags{
-  flex-direction: row;
-  background-color: #f0eff1;
-  color: #22c959;
-  border: 1px solid #22c959;
+  padding-left:10px;
+  padding-top:4px;
   font-size: 1em;
-  border-radius: 50px;
-  margin: 5px;
-  padding: 5px 15px 0px 15px;
+  border: none;
+  border-radius: 0;
+  background-color: none;
+  border-bottom: 1px solid #22c959;
+  margin: 0px;
+  height: 20px;
 }
 
 .real_tags:hover{
   background-color: #22c959;
-  color: #f0eff1;
-  transition: 0.5s;
-  cursor: pointer;
+  color: #F0EFF1;
+}
+
+/* post list on home page*/
+.posts{
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 80vw;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: stretch;
+  z-index: 1000;
+}
+.post{
+  background-color: #F0EFF1ff;
+  border: 1px solid #22c959;
+  font-size: 1em;
+  border-radius: 20px;
+  padding: 10px;
+  margin: 10px;
+}
+
+img{
+  width: 20vw;
+}
+h2, p{
+  font-size: 1em;
+}
+
+#header{
+  display: none;
 }
