--- a/assets/css/templates/default.css
+++ b/assets/css/templates/default.css
@@ -1,10 +1,16 @@
+@keyframes slide {
+  0% { transform: translateY(100vh); }
+  100% { transform: translateY(0vh); }
+}
+
 article{
-  width: 90%;
+  width: 85%;
   position: absolute;
   right:0px;
 }
 
 h1{
+
   width: 70%;
   color: #22c959;
   font-size: 1em;
@@ -18,6 +24,7 @@ h1{
 }
 
 main{
+  animation: slide 2s forwards;
   width: 70%;
   color: #22c959;
   font-size: 1em;
@@ -30,11 +37,6 @@ main{
   border: 1px solid #22c959;
 }
 
-img{
-  width: 100%;
-  height: auto;
-}
-
 blockquote::before{
   content:"»";
 }
@@ -44,29 +46,30 @@ blockquote::after{
 }
 
 .notes{
-  position: absolute;
+  position: fixed;
+  display: flex;
+  flex-direction: column;
   right: 0px;
-  width: 20%;
+  width: 25%;
   color: #f0eff1;
   top: 30px;
-  padding: 20px;
+  padding: 5px;
 }
 
 .downloadGroup{
-  border: 1px solid #22c959;
+  display: flex;
+  /*border: 1px solid #22c959;*/
   margin: 10px;
   width: 100%;
+  flex-direction: row;
 }
 
 .downloads{
-  width: 95%;
+  text-align: right;
 
   font-size: 1em;
   border-radius: 50px;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
-  flex-direction: row;
+
 
   text-decoration: none;
   margin: 5px;
@@ -75,8 +78,18 @@ blockquote::after{
 
   color: #f0eff1;
   background-color: #22c959;
+
+  overflow: hidden;
+  white-space: nowrap;
 }
 
+.downloads span{
+  overflow: hidden;
+  max-width: 10ch;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  background-color: white;
+}
 
 .downloads:hover{
   box-shadow: 0 0 15px #22c959;
@@ -94,12 +107,13 @@ blockquote::after{
   width: 70vw;
 }
 
-#authors,li{
+.authors li, .authors{
+  text-align: right;
   color: #22c959;
   list-style-type: none;
 }
 
-#authors,ul{
+.authors ul{
   width: 30%;
   color: #22c959;
   font-size: 1em;
@@ -110,4 +124,27 @@ blockquote::after{
   padding: 10px 20px 10px 20px;
   border-radius: 20px;
   border: 1px solid #22c959;
+}
+
+.keywords li{
+  text-align: right;
+  background-color: #22c959;
+  color: #F0EFF1;
+  width: 30%;
+}
+
+main img{
+  width: 100%;
+  height: auto;
+
+}
+
+main figure ul{
+  display: flex;
+  width: 100%;
+  border: none;
+}
+main figure ul li{
+  width: 30%;
+  margin: 10px;
 }
