--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -62,7 +62,7 @@ span{opacity: 0;}
   width: 80vw;
   display: flex;
   flex-wrap: wrap;
-  justify-content: stretch;
+  /*justify-content: stretch;*/
   z-index: 1000;
 }
 .post{
