--- a/assets/frontend/src/scss/global.scss
+++ b/assets/frontend/src/scss/global.scss
@@ -81,6 +81,13 @@ blockquote {
 	h3, h4, h5, h6 {
 		margin-top: 2rem;
 	}
+	a[href^="#_ftn"] {
+		font-size: 0.6em;
+		vertical-align: super;
+		&:hover {
+			color: blue;
+		}
+	}
 }
 
 @keyframes slide-up {
