--- a/assets/frontend/src/scss/global.scss
+++ b/assets/frontend/src/scss/global.scss
@@ -25,6 +25,7 @@ body {
 	background-color: $white;
 	@include regular;
 	@include text-normal;
+	overflow-x: hidden;
 }
 
 .button {
@@ -81,6 +82,7 @@ main.page {
 	margin-left: 8rem;
 	border-radius: 10px;
 }
+
 .text {
 	@include text-medium;
 	blockquote,
@@ -156,6 +158,25 @@ main.page {
 #print{
 	position: fixed;
 
+}
+
+.article-info{
+	width: 30vw;
+}
+
+.titleImg {
+  position: relative;
+  width: 45vw;
+  height: 30vw;
+  left: 40vw;
+	top: -6rem;
+	margin-bottom: -5rem;
+	img{
+		width: 100%;
+	  height: 100%;
+	  object-position: center;
+	  object-fit: cover;
+	}
 }
 
 @media print {
