--- a/assets/frontend/src/scss/_print.scss
+++ b/assets/frontend/src/scss/_print.scss
@@ -19,8 +19,10 @@
 
 @page {
   overflow: visible;
-  margin-bottom: 0cm;
   margin-top: 0cm;
+  margin-bottom: 0cm;
+  margin-left: 0cm;
+  margin-right: 0cm;
 }
 
 @page :footer {
