--- a/assets/frontend/src/scss/_mixins.scss
+++ b/assets/frontend/src/scss/_mixins.scss
@@ -77,6 +77,12 @@ $large2: size( 18 ); // 216px
     line-height: 1.2;
     letter-spacing: 0.001em;
 }
+@mixin text-huge {
+    @include bold;
+    font-size: size( 4 );
+    line-height: 1;
+    letter-spacing: 0.001em;
+}
 
 @mixin noSelect {
     -webkit-user-select: none;
