--- a/assets/frontend/src/scss/global.scss
+++ b/assets/frontend/src/scss/global.scss
@@ -31,14 +31,16 @@ body {
 
 .button {
 	position: relative;
-	padding: 0.2em 0.5em;
+	padding: 0.2em 1em;
 	text-transform: uppercase;
+	font-size: 0.9em;
 	background-color: #eee;
-	border-radius: 0.35em;
+	border-radius: 0.15em;
 	transition: background-color 300ms ease;
 	&:hover,
 	&[aria-current=page] {
 		background-color: $yellow;
+		box-shadow: 0px 2px 3px 3px $yellow;
 	}
 }
 nav {
@@ -128,6 +130,7 @@ main.page {
 	}
 	p + p {
 		margin-top: 0.75em;
+		font-size: 12em;
 	}
 }
 
