--- a/assets/frontend/src/scss/global.scss
+++ b/assets/frontend/src/scss/global.scss
@@ -47,14 +47,15 @@ body {
 	position: relative;
 	padding: 0.2em 1em;
 	text-transform: uppercase;
-	font-size: 0.9em;
+	letter-spacing: 0.1em;
+	font-size: 0.8em;
 	background-color: #eee;
 	border-radius: 0.15em;
 	transition: background-color 300ms ease;
 	&:hover,
 	&[aria-current=page] {
 		background-color: $yellow;
-		box-shadow: 0px 2px 3px 3px $yellow;
+		box-shadow: 0px 0px 3px 3px $yellow;
 	}
 }
 nav {
