fix webfont embed

--- a/assets/frontend/src/scss/_mixins.scss
+++ b/assets/frontend/src/scss/_mixins.scss
@@ -38,7 +38,7 @@ $large2: size( 18 ); // 216px
 /* fonts */
 
 @mixin regular {
-    font-family: 'Favorit', sans-serif;
+    font-family: 'Favorit Regular', sans-serif;
     font-style: normal;
     font-weight: normal;
 }
