shitton of stuff

--- a/assets/frontend/src/scss/_grid.scss
+++ b/assets/frontend/src/scss/_grid.scss
@@ -29,7 +29,7 @@
 .grid {
 
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     box-sizing: border-box;
     justify-items: stretch;
     align-items: stretch;
