--- a/assets/frontend/src/scss/_print.scss
+++ b/assets/frontend/src/scss/_print.scss
@@ -52,6 +52,10 @@ nav{
   display: none;
 }
 
+.categories{display: none;}
+
+canvas{display: none;}
+
 .cover_info{
   position: absolute;
   top: 4cm;
