--- a/assets/frontend/src/scss/global.scss
+++ b/assets/frontend/src/scss/global.scss
@@ -174,6 +174,17 @@ main.page {
 			height: 100%;
 		}
 	}
+	.gallery {
+		&[data-count="1"] {
+			ul {
+				display: flex;
+				justify-content: center;
+				li {
+					flex: 0 0 50%;
+				}
+			}
+		}
+	}
 }
 
 @keyframes slide-up {
